fixed a lot of responsive layout issues

--- a/components/classes/Classes.scss
+++ b/components/classes/Classes.scss
@@ -75,7 +75,7 @@
 @media (max-width: 768px) {
     .classes {
         font-size: 0.8rem;
-        margin-top: -4em;
+        margin-top: -2.5em;
     }
     .class-track {
         max-width: 100%!important;
