--- a/components/cover-intro/CoverIntro.scss
+++ b/components/cover-intro/CoverIntro.scss
@@ -109,7 +109,7 @@
     background-size: auto 140%;
     background-position: left center;
     background-repeat: no-repeat;
-    margin-bottom: 6em;
+    margin-bottom: 2em;
     overflow: hidden;
     .content {
         width: 68%;
