--- a/components/hire/hire.scss
+++ b/components/hire/hire.scss
@@ -51,7 +51,7 @@ section > div {
   position: relative;
 
   @media (max-width: 768px) {
-    padding: 1rem 5vw;
+    // padding: 1rem 5vw;
     margin: 0;
     font-size: 1rem;
     line-height: 2.2rem;
