--- a/components/layouts/content/ContentWithPicture.scss
+++ b/components/layouts/content/ContentWithPicture.scss
@@ -24,7 +24,7 @@
 
         > h1 {
             font-size: 1.75rem;
-            margin: 0 0 1em 0;
+            margin: 0 0 0 0;
         }
     }
     .content-container > div {
