--- a/components/team/item-card/item-card.scss
+++ b/components/team/item-card/item-card.scss
@@ -89,7 +89,9 @@ $primary-color: #293a7d;
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 375px) {
   .team-member-card {
-    max-width: 180px;
+    // max-width: 180px;
+    // min-width: 180px;
+    width: 100%;
     padding: 13px;
     .social-media {
       margin-top: 0.1rem;
